--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,9 +27,35 @@
 .wrapper {
   background-color: #fff;
   font-family: Helvetica,sans-serif;
+  width: 100%;
+  padding-top: 60px;
+  padding-bottom: 50px;
 }
 
-.segment{
-  width: 550px;
+.accordion {
+  width: 61%;
+
+}
+
+.segment {
+  width: 61%;
+  margin: 0 auto;
+  border: 1px solid #00A3B4;
+}
+
+.accordHead {
+  width: 60%;
+  color: white;
+  background-color: #13C7D6;
+  border: 1px solid #00A3B4;
   margin: 0 auto;
 }
+
+.accordBody {
+  width: 60%;
+  color: #616467;
+  background-color: white;
+  border: 1px solid #00A3B4;
+  margin: 0 auto;
+}
+
