format text within respective elements

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -49,6 +49,7 @@
   background-color: #13C7D6;
   border: 1px solid #00A3B4;
   margin: 0 auto;
+  text-align: center;
 }
 
 .accordBody {
@@ -57,5 +58,7 @@
   background-color: white;
   border: 1px solid #00A3B4;
   margin: 0 auto;
+  text-align: left;
+  text-indent: 35px;
 }
 
